<resources>
    <string name="app_name">Pokemon</string>
    <string name="pokedex">Pokedex</string>
    <string name="mapa">Mapa</string>
    <string name="loja">Loja</string>
    <string name="login_pokemonif">Login PokemonIF</string>
    <string name="email">Email</string>
    <string name="entrar">Entrar</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="preencha_email">Preencha seu Email</string>
    <string name="preencha_email_valido">Preencha um Email válido</string>
    <string name="preencha_senha">Preencha sua Senha</string>
    <string name="tamanho_senha">Senha precisa ter mais de 6 caracteres</string>
    <string name="logado_sucesso">Logado com Sucesso!</string>
    <string name="email_senha_incorreto">Email ou Senha incorreto! Tente novamente</string>
    <string name="apelido">Apelido</string>
    <string name="senha">Senha</string>
    <string name="tca">TCA</string>
    <string name="tinf">TINF</string>
    <string name="tai">TAI</string>
    <string name="tads">TADS</string>
    <string name="escolha_seu_cl">Escolha seu Clã</string>
    <string name="nome">Nome</string>
    <string name="carisma">Carisma</string>
    <string name="inteligencia">Inteligência</string>
    <string name="sorte">Sorte</string>
    <string name="preencha_nome">Preencha seu Nome</string>
    <string name="preencha_apelido">Preencha seu Apelido</string>
    <string name="confirma_senha">Confirme sua Senha</string>
    <string name="senhas_diferentes">Senhas estão diferentes</string>
    <string name="escolha_cla">Escolha um Clã</string>
    <string name="escolha_carisma">Escolha a quantidade de Carisma</string>
    <string name="escolha_inteligencia">Escolha a quantidade de Inteligência</string>
    <string name="escolha_sorte">Escolha a quantidade de Sorte</string>
    <string name="pokemon_if">Pokemon IF</string>
    <string name="cancelar">Cancelar</string>
    <string name="ate_a_proxima">Até a proxima!</string>
    <string name="deslogar">Deslogar</string>
    <string name="deslogar_msg">Deseja realmente deslogar de sua conta?</string>
    <string name="confirmar">Confirmar</string>
</resources>
